@@ -1,0 +1,30 @@
+
+from kiwi.ui.hyperlink import HyperLink
+from kiwi.ui.objectlist import ObjectList, ObjectTree
+from kiwi.ui.widgets.label import ProxyLabel
+from kiwi.ui.widgets.combo import ProxyComboEntry, ProxyComboBox
+from kiwi.ui.widgets.checkbutton import ProxyCheckButton
+from kiwi.ui.widgets.radiobutton import ProxyRadioButton
+from kiwi.ui.widgets.entry import ProxyEntry, ProxyDateEntry
+from kiwi.ui.widgets.spinbutton import ProxySpinButton
+from kiwi.ui.widgets.textview import ProxyTextView
+from kiwi.ui.widgets.button import ProxyButton
+
+# pyflakes
+HyperLink
+ObjectList
+ObjectTree
+ProxyLabel
+ProxyComboEntry
+ProxyComboBox
+ProxyCheckButton
+ProxyRadioButton
+ProxyEntry
+ProxyDateEntry
+ProxySpinButton
+ProxyTextView
+ProxyButton
+
+
+
+
